Update to latest model, add video streaming feature, fixing label box overflow

--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   },
   "homepage": "https://github.com/Hyuto/yolov5-tfjs#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^3.15.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@tensorflow/tfjs": "^4.1.0",
+    "normalize.css": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.8.0"
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "vite": "^3.2.3"
   }
 }
